src/components/room/chat/bubbles.css
.container {
	position: relative;
	margin-top: 0.5rem;
	padding-right: 1rem;
	display: flex;
	justify-content: flex-end;
	margin-bottom: 1.8rem;
}

.containerOtherUser {
	composes: container;
	justify-content: flex-start;
}

.bubble {
	position: relative;
	min-width: 2.5rem;
	border-radius: 0.3rem;
	padding: 0.7rem 1rem 0.5rem 1rem;
	background-color: rgba(255, 255, 255, 0.13);
	color: rgba(255, 255, 255, 0.9);
	font-size: 0.8rem;
	text-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.6);
	margin-right: 0.2rem;
	box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.1);
	z-index: 2;
	order: 2;
	margin-bottom: 0;
}

.musicBubble {
	composes: bubble;
	background-color: rgba(255, 255, 255, 0.06);
	min-height: 2.45rem;
}

.bubbleOtherUser {
	composes: bubble;
	margin-left: 1.6rem;
	margin-right: 0;
}

.musicBubbleOtherUser {
	composes: musicBubble;
	margin-left: 1.6rem;
	margin-right: 0;
}

.bubble:after {
	content: ' ';
	position: absolute;
	width: 0;
	height: 0;
	left: auto;
	right: -0.5rem;
	bottom: 0;
	border: 0.5rem solid;
	transform: rotate(45deg);
	border-color: rgba(255, 255, 255, 0.1) transparent transparent transparent;
	box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.1);
}

.musicBubble:after {
	display: none;
}

.bubbleOtherUser:after {
	content: ' ';
	position: absolute;
	width: 0;
	height: 0;
	right: auto;
	left: -0.5rem;
	bottom: 0;
	border: 0.5rem solid;
	transform: rotate(225deg);
	border-color: transparent rgba(255, 255, 255, 0.1) transparent transparent;
	box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.1);
}

.musicBubbleOtherUser:after {
	display: none;
}

.avatar {
	align-self: flex-end;
	position: relative;
	top: 0.8rem;
	left: 0.5rem;
	z-index: 1;
	order: 3;
	width: 2rem;
}

.avatarOtherUser {
	composes: avatar;
	order: 1;
}

.text {
	margin-bottom: 0.2rem;
	overflow: hidden;
	text-overflow: ellipsis;
}

.text a:hover {
	text-decoration: underline;
}

.timestamp {
	position: absolute;
	bottom: -1rem;
	right: 3.5rem;
	font-size: 0.55rem;
	color: rgba(255, 255, 255, 0.3);
	cursor: pointer;
}

.timestampOtherUser {
	composes: timestamp;
	right: auto;
	left: 3.5rem;
}

.unfurl {
	margin-top: 0.5rem;
	width: 100%;
	min-width: 22rem;
}

@media (max-width: 1200px) {
	.unfurl {
		min-width: 13rem;
	}
}

@media (max-width: 1100px) {
	.unfurl {
		min-width: 10rem;
	}
}

.unfurlTitleArea {
	display: flex;
	margin-bottom: 0.5rem;
}

.unfurlHtml {
	padding-top: 0.5rem;
	padding-bottom: 1rem;
}

.unfurlHtml img {
	max-width: 100%;
	height: auto;
}

.unfurlIcon {
	width: 1rem;
	height: 1rem;
	margin-right: 0.5rem;
	margin-top: 0.1rem;
	flex-shrink: 0;
}

.unfurlTitle {
	font-size: 0.8rem;
	font-weight: normal;
	line-height: 1.1rem;
}

.unfurlTitle:hover {
	text-decoration: underline;
}

.unfurlThumbnail {
	max-width: 100%;
	height: auto;
}

.showHide {
	composes: unfurlTitle;
	color: rgba(200, 200, 200, 0.6);
	padding-left: 0.5rem;
	cursor: pointer;
	letter-spacing: 0.2rem;
}

.showHide:hover {
	text-decoration: none;
}

.unfurlThumbDescription {
	display: flex;
}

.unfurlDescription {
	color: rgba(255, 255, 255, 0.6);
	margin-left: 1.5rem;
	font-size: 0.8rem;
	margin-bottom: 0.5rem;
}

.trackContainer {

	overflow: hidden;
	width: 100%;
}

.trackContainer:not(:first-child) {
	margin-top: 0.5rem;
}

.trackGroup {
	margin-bottom: -0.3rem;
	position: relative;
}

.andMore {
	font-size: 75%;
	margin-left: 3rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
	cursor: pointer;
}

.andMore:hover {
	text-decoration: underline;
}

.trackGroupEmoji {
	margin-left: 2.4rem;
}

.reactionEmoji {
	width: 1.8rem;
	height: 1.8rem;
	position: absolute;
	left: 0.55rem;
	top: 0.8rem;
}

.slashMe {
	font-style: italic;
	padding-right: 0.5rem;
}

.code {
	display: inline-block;
	background: rgba(0, 0, 0, 0.7);
	font-family: 'Inconsolata', 'Courier New', monospace;
	color: rgba(255, 255, 255, 0.9);
	padding: 3px;
}

